backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oleachron-backend
  labels:
    name: oleachron-backend
    app: olive-lifecycle-api
